--- a/package.json
+++ b/package.json
@@ -5,9 +5,16 @@
   "author": "Hunter Chang",
   "dependencies": {
     "gatsby": "^2.19.5",
+    "gatsby-background-image": "^0.9.16",
+    "gatsby-image": "^2.2.39",
     "gatsby-plugin-manifest": "^2.2.38",
+    "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
     "gatsby-plugin-react-helmet": "^3.1.21",
     "gatsby-plugin-sass": "^2.1.27",
+    "gatsby-plugin-sharp": "^2.4.4",
+    "gatsby-source-filesystem": "^2.1.47",
+    "gatsby-source-wordpress": "^3.1.59",
+    "gatsby-transformer-sharp": "^2.3.13",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
